--- a/meson_options.txt
+++ b/meson_options.txt
@@ -6,8 +6,16 @@ option(
 )
 
 option(
-  'foo',
-  type: 'boolean',
-  value: true,
-  description: 'Build foo application.',
+  'unpack_bufsiz',
+  type: 'integer',
+  min: 1,
+  value: 8,
+  description: 'Size of the buffer in bytes for the unpacker.',
+)
+option(
+  'pack_bufsiz',
+  type: 'integer',
+  min: 1,
+  value: 8,
+  description: 'Size of the buffer in bytes for the packer.',
 )
