--- a/tests/unit/meson.build
+++ b/tests/unit/meson.build
@@ -10,36 +10,5 @@ unittests_env = [
   'CK_VERBOSITY=silent',
 ]
 
-
-unittest_libfoo = executable(
-  'unittest-libfoo',
-  [
-    'count.c',
-  ],
-  dependencies: [libfoo_dep, check_suite, obstack],
-  include_directories: includes,
-)
-test(
-  'unittest-libfoo',
-  bash,
-  args: [test_driver, unittest_libfoo.full_path()],
-  env: unittests_env,
-  protocol: 'tap',
-  depends: unittest_libfoo,
-)
-
-
-unittest_foo = executable(
-  'unittest-foo',
-  foo_sources + ['config.c'],
-  dependencies: foo_dependencies + [check_suite, obstack],
-  include_directories: [includes, foo_internal_includes],
-)
-test(
-  'unittest-foo',
-  bash,
-  args: [test_driver, unittest_foo.full_path()],
-  env: unittests_env,
-  protocol: 'tap',
-  depends: unittest_foo,
-)
+subdir('libshvchainpack')
+subdir('libshvrpc')
