--- a/libshvchainpack/meson.build
+++ b/libshvchainpack/meson.build
@@ -1,16 +1,20 @@
 libshvchainpack_sources = files(
-  'chainpack.c',
   'chainpack_pack.c',
   'chainpack_unpack.c',
-  'cpcp.c',
-  'cpcp_convert.c',
-  'cpon.c',
+  'cp_pack.c',
+  'cp_unpack.c',
+  'cpdatetime.c',
+  'cpdecimal.c',
+  'cpon_pack.c',
+  'cpon_unpack.c',
 )
+libshvchainpack_dependencies = [m]
 
 libshvchainpack = library(
   'shvchainpack',
   libshvchainpack_sources,
   version: '0.0.0',
+  dependencies: libshvchainpack_dependencies,
   include_directories: includes,
   link_args: '-Wl,--version-script=' + join_paths(
     meson.current_source_dir(),
@@ -21,6 +25,7 @@ libshvchainpack = library(
 install_headers(libshvchainpack_headers)
 
 libshvchainpack_dep = declare_dependency(
+  dependencies: libshvchainpack_dependencies,
   include_directories: includes,
   link_with: libshvchainpack,
 )
