--- a/libshvrpc/meson.build
+++ b/libshvrpc/meson.build
@@ -4,7 +4,9 @@ libshvrpc_sources = [
     'rpcclient_datagram.c',
     'rpcclient_serial.c',
     'rpcclient_stream.c',
-    'rpcmsg.c',
+    'rpcmsg_access.c',
+    'rpcmsg_meta.c',
+    'rpcmsg_pack.c',
     'rpcurl.c',
   ),
   gperf.process('rpcmsg_access.gperf'),
