--- a/tests/unit/libshvchainpack/meson.build
+++ b/tests/unit/libshvchainpack/meson.build
@@ -1,12 +1,17 @@
 unittest_libshvchainpack = executable(
   'unittest-libshvchainpack',
   [
-    'packunpack.c',
     'chainpack.c',
+    'chainpackh.c',
+    'cp_pack.c',
+    'cp_unpack.c',
+    'cpdatetime.c',
+    'cpdecimal.c',
     'cpon.c',
+    unittest_utils_src,
   ],
   dependencies: [libshvrpc_dep, check_suite, obstack],
-  include_directories: includes,
+  include_directories: [includes, unittest_utils_includes],
 )
 test(
   'unittest-libshvchainpack',
@@ -15,4 +20,5 @@ test(
   env: unittests_env,
   protocol: 'tap',
   depends: unittest_libshvchainpack,
+  timeout: 120,
 )
