--- a/tests/unit/libshvrpc/meson.build
+++ b/tests/unit/libshvrpc/meson.build
@@ -1,10 +1,14 @@
 unittest_libshvrpc = executable(
   'unittest-libshvrpc',
   [
+    'rpcmsg_meta.c',
+    'rpcmsg_pack.c',
+    'rpcmsg_access.c',
     'rpcurl.c',
+    unittest_utils_src,
   ],
   dependencies: [libshvrpc_dep, check_suite, obstack],
-  include_directories: includes,
+  include_directories: [includes, unittest_utils_includes],
 )
 test(
   'unittest-libshvrpc',
