--- a/tests/meson.build
+++ b/tests/meson.build
@@ -1,5 +1,8 @@
 bash = find_program('bash')
 test_driver = meson.current_source_dir() + '/test-driver.sh'
 
+pyshvbroker = find_program('pyshvbroker')
+
+
 subdir('unit')
 subdir('run')
