--- a/tests/unit/libshvchainpack/meson.build
+++ b/tests/unit/libshvchainpack/meson.build
@@ -12,6 +12,7 @@ unittest_libshvchainpack = executable(
   ],
   dependencies: [libshvrpc_dep, check_suite, obstack],
   include_directories: [includes, unittest_utils_includes],
+  c_args: unittest_utils_c_args,
 )
 test(
   'unittest-libshvchainpack',
