--- a/tests/unit/utils/meson.build
+++ b/tests/unit/utils/meson.build
@@ -1,5 +1,10 @@
 unittest_utils_src = files(
+  'broker.c',
   'packstream.c',
+  'tmpdir.c',
   'unpack.c',
 )
 unittest_utils_includes = include_directories('.')
+unittest_utils_c_args = [
+  '-DPYSHVBROKER="' + pyshvbroker.full_path() + '"',
+]
