libshvrpc: link with libshvchainpack
This ensures that user links not only with libshvrpc but also with
libshvchainpack. One can't be used without the other.

--- a/libshvrpc/meson.build
+++ b/libshvrpc/meson.build
@@ -42,4 +42,8 @@ libshvrpc_dep = declare_dependency(
 
 
 pkg_mod = import('pkgconfig')
-pkg_mod.generate(libshvrpc, description: 'Silicon Heaven RPC')
+pkg_mod.generate(
+  libshvrpc,
+  libraries: [libshvchainpack],
+  description: 'Silicon Heaven RPC',
+)
