Improved implementation of RPC Handler

--- a/include/meson.build
+++ b/include/meson.build
@@ -10,7 +10,11 @@ libshvrpc_headers = files(
   'shv/rpcclient.h',
   'shv/rpcclient_impl.h',
   'shv/rpchandler.h',
+  'shv/rpchandler_app.h',
+  'shv/rpchandler_responses.h',
   'shv/rpcmsg.h',
+  'shv/rpcnode.h',
+  'shv/rpcserver.h',
   'shv/rpcurl.h',
 )
 libshvbroker_headers = files('shv/rpcbroker.h')
