--- a/tests/unit/libshvrpc/meson.build
+++ b/tests/unit/libshvrpc/meson.build
@@ -10,7 +10,7 @@ unittest_libshvrpc = executable(
     'rpcurl.c',
     unittest_utils_src,
   ],
-  dependencies: [libshvrpc_dep, check_suite, obstack],
+  dependencies: [libshvrpc_dep, check_suite],
   include_directories: [includes, unittest_utils_includes],
   c_args: unittest_utils_c_args,
 )
@@ -22,4 +22,28 @@ test(
   protocol: 'tap',
   depends: unittest_libshvrpc,
   timeout: 120,
+)
+
+unittest_libshvrpc_internal = executable(
+  'unittest-libshvrpc-internal',
+  [
+    'strset.c',
+    libshvrpc_sources,
+    unittest_utils_src,
+  ],
+  dependencies: [libshvrpc_dep, check_suite],
+  include_directories: [
+    includes,
+    unittest_utils_includes,
+    libshvrpc_internal_includes,
+  ],
+  c_args: unittest_utils_c_args,
+)
+test(
+  'unittest-libshvrpc-internal',
+  bash,
+  args: [test_driver, unittest_libshvrpc_internal.full_path()],
+  env: unittests_env,
+  protocol: 'tap',
+  depends: unittest_libshvrpc_internal,
 )
